--- a/repo3.html
+++ b/repo3.html
@@ -1,3 +1,7 @@
+<head>
+    <link rel="stylesheet" href="">
+</head>
 <h2>Counter</h2>
 <h1>Counter</h1>
+<div style="margin-bottom:10px; margin-left:10px; font-size:50px">1</div>
 <button>Increase</button>
