--- a/repo3.html
+++ b/repo3.html
@@ -1,7 +1,14 @@
 <head>
-    <link rel="stylesheet" href="">
+    <meta name="viewport" content="width=device-width , initial-scale=1.0"  >
+<link rel="stylesheet" type="text/css" href="repo3.css">
 </head>
+<body>
+    
+
 <h2>Counter</h2>
 <h1>Counter</h1>
 <div style="margin-bottom:10px; margin-left:10px; font-size:50px">1</div>
 <button>Increase</button>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> 
+<script src="repo3.js"> </script>
+</body>
