--- a/repo3.html
+++ b/repo3.html
@@ -9,8 +9,10 @@
     
 
 <h2>Counter</h2>
-<h1>Counter</h1>
-  <p  id="numb" style="margin-bottom:10px; margin-left:10px; font-size:50px">1</p> 
-<button id="btn">Increase</button>
+<h1 id="over">0
+
+</h1>
+  
+<button onclick="addone()">Increase</button>
 
 </body>
