--- a/repo3.html
+++ b/repo3.html
@@ -1,3 +1,4 @@
+<html>
 <head>
     <meta name="viewport" content="width=device-width , initial-scale=1.0"  >
 <link rel="stylesheet" type="text/css" href="repo3.css">
@@ -6,13 +7,9 @@
 
 </head>
 <body>
-    
-
-<h2>Counter</h2>
-<h1 id="over">0
-
-</h1>
-  
-<button onclick="addone()">Increase</button>
+   <h1>Counter</h1>
+  <h1 id="carrier">0</h1>
+  <button onclick="displaycount()">Increase</button> 
 
 </body>
+</html>
