--- a/repo3.html
+++ b/repo3.html
@@ -7,9 +7,11 @@
 
 </head>
 <body>
+  <div id="cint">
    <h1>Counter</h1>
   <h1 id="carrier">0</h1>
   <button onclick="displaycount()">Increase</button> 
-
+  <div><button id="res" onclick="displayreset()" style="margin-top:20px">Reset</button></div>
+</div>
 </body>
 </html>
