--- a/repo3.html
+++ b/repo3.html
@@ -9,9 +9,13 @@
 <body>
   <div id="cint">
    <h1>Counter</h1>
-  <h1 id="carrier">0</h1>
-  <button onclick="displaycount()">Increase</button> 
-  <div><button id="res" onclick="displayreset()" style="margin-top:20px">Reset</button></div>
+   <div class="countNum">
+  <h1>0</h1>
+</div>
+<div class="countBtn">
+  <button>Count up</button> </div>
+
+  <div class="resetBtn"><button style="margin-top:20px">Reset</button></div>
 </div>
 </body>
 </html>
