--- a/repo3.html
+++ b/repo3.html
@@ -17,5 +17,16 @@
 
   <div class="resetBtn"><button style="margin-top:20px">Reset</button></div>
 </div>
+<script>const countBtn= document.querySelector(".countBtn button");
+  const resetBtn= document.querySelector(".resetBtn button");
+  let countNum= document.querySelector(".countNum h1");
+  countBtn.addEventListener("click" ,countUp);
+  resetBtn.addEventListener("click",reset);
+  function countUp(){
+    countNum.innerHTML++;
+  }
+  function reset(){
+    countNum.innerHTML=0;
+  }</script>
 </body>
 </html>
